--- a/index.html
+++ b/index.html
@@ -317,27 +317,26 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <div class="project-media" style="background-image:url(img/portfolio/port8.jpg)"></div>
+                                        <div class="project-media" style="background-image:url(img/rise.png)"></div>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
-                                                <h2>Creative Shop Work</h2>
+                                                <h2>Rise Bar X Nike Run Club</h2>
 
                                             </div>
-                                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising
-                                                pain was born and I will give you a complete account of the system, and expound the
-                                                actual teachings of the great explorer of the truth, the master-builder of human
-                                                happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure.</p>
+                                            <p>Flyer for a Nike Run Club and Rise Bar co-partnered event where attendee's will be running with others
+                                                to exercise and hang out.
+                                            </p>
                                             <ul class="project-info-list">
                                                 <li class="text-uppercase">
-                                                    <span>Client</span>Jon Morikas</li>
+                                                    <span>Audience</span>Rise Bar Customers</li>
                                                 <li class="text-uppercase">
-                                                    <span>Industry</span>Adventure / Travel</li>
-                                                <li class="text-uppercase">
-                                                    <span>Services</span>Design, Art Direction, Website</li>
-                                                <li class="text-uppercase">
+                                                    <span>Industry</span>Nutrition</li>
+                                                <!-- <li class="text-uppercase">
+                                                    <span>Services</span>Design, Art Direction, Website</li> -->
+                                                <!-- <li class="text-uppercase">
                                                     <span>Website</span>
                                                     <a href="#">www.project.com</a>
-                                                </li>
+                                                </li> -->
                                             </ul>
                                         </div>
                                     </div>
@@ -353,9 +352,9 @@
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal">
                                 <h3>
-                                    <a href="#" data-toggle="modal" data-target="#popup-modal">Royal Carribean</a>
+                                    <a href="#" data-toggle="modal" data-target="#popup-modal">Royal Caribbean</a>
                                 </h3>
-                                <span>Marketing, Branding</span>
+                                <span>Marketing, Branding, Cruise Lines</span>
                             </div>
                         </div>
                         <!-- Modal content start -->
@@ -363,26 +362,20 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <div class="project-media" style="background-image:url(img/portfolio/port1.jpg)"></div>
+                                        <div class="project-media" style="background-image:url(img/royal.jpg)"></div>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
-                                                <h2>Neleman Cava</h2>
+                                                <h2>Royal Caribbean</h2>
                                             </div>
-                                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising
-                                                pain was born and I will give you a complete account of the system, and expound the
-                                                actual teachings of the great explorer of the truth, the master-builder of human
-                                                happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure.</p>
+                                            <p>A promotional rewards program for loyal Royal Caribbean customers to increase
+                                                brand loyalty and customer lifetime value. The primary goal was to increase customer 
+                                                traffic during the cruise's offseason.
+                                            </p>
                                             <ul class="project-info-list">
                                                 <li class="text-uppercase">
-                                                    <span>Client</span>Jon Morikas</li>
+                                                    <span>Audience</span>Royal Caribbean Customers</li>
                                                 <li class="text-uppercase">
-                                                    <span>Industry</span>Adventure / Travel</li>
-                                                <li class="text-uppercase">
-                                                    <span>Services</span>Design, Art Direction, Website</li>
-                                                <li class="text-uppercase">
-                                                    <span>Website</span>
-                                                    <a href="#">www.project.com</a>
-                                                </li>
+                                                    <span>Industry</span>Cruise Lines</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -411,23 +404,16 @@
                                         <div class="project-media" style="background-image:url(img/beyondtoxin_instagram.jpg)"></div>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
-                                                <h2>Jeff Burger</h2>
+                                                <h2>BeyondToxin Logo</h2>
                                             </div>
-                                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising
-                                                pain was born and I will give you a complete account of the system, and expound the
-                                                actual teachings of the great explorer of the truth, the master-builder of human
-                                                happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure.</p>
+                                            <p>Freelance mascot logo for BeyondToxin, a FGC twitch streamer and youtuber. Most well known
+                                                for competing in MKX, Injustice and DBZF
+                                            </p>
                                             <ul class="project-info-list">
                                                 <li class="text-uppercase">
-                                                    <span>Client</span>Jon Morikas</li>
+                                                    <span>Client</span>BeyondToxin</li>
                                                 <li class="text-uppercase">
-                                                    <span>Industry</span>Adventure / Travel</li>
-                                                <li class="text-uppercase">
-                                                    <span>Services</span>Design, Art Direction, Website</li>
-                                                <li class="text-uppercase">
-                                                    <span>Website</span>
-                                                    <a href="#">www.project.com</a>
-                                                </li>
+                                                    <span>Industry</span>eSports</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -456,24 +442,15 @@
                                         <div class="project-media" style="background-image:url(img/hawk.png)"></div>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
-                                                <h2>Delirio Tropical</h2>
+                                                <h2>Hawk Mascot</h2>
 
                                             </div>
-                                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising
-                                                pain was born and I will give you a complete account of the system, and expound the
-                                                actual teachings of the great explorer of the truth, the master-builder of human
-                                                happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure.</p>
+                                            <p>A freelance design for an eSports mascot logo.</p>
                                             <ul class="project-info-list">
                                                 <li class="text-uppercase">
-                                                    <span>Client</span>Jon Morikas</li>
+                                                    <span>Client</span>Up For Sale</li>
                                                 <li class="text-uppercase">
-                                                    <span>Industry</span>Adventure / Travel</li>
-                                                <li class="text-uppercase">
-                                                    <span>Services</span>Design, Art Direction, Website</li>
-                                                <li class="text-uppercase">
-                                                    <span>Website</span>
-                                                    <a href="#">www.project.com</a>
-                                                </li>
+                                                    <span>Industry</span>eSports</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -502,23 +479,16 @@
                                         <div class="project-media" style="background-image:url(img/honeybee.png)"></div>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
-                                                <h2>Sweet Lane</h2>
+                                                <h2>HoneyBee Logo</h2>
                                             </div>
-                                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising
-                                                pain was born and I will give you a complete account of the system, and expound the
-                                                actual teachings of the great explorer of the truth, the master-builder of human
-                                                happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure.</p>
+                                            <p>A passion design project for Honeybee, a prolific FGC competitor, twitch streamer,
+                                                and youtuber that specializes in games like MKX, MK9 and Injustice.
+                                            </p>
                                             <ul class="project-info-list">
                                                 <li class="text-uppercase">
-                                                    <span>Client</span>Jon Morikas</li>
+                                                    <span>Client</span>HoneyBee</li>
                                                 <li class="text-uppercase">
-                                                    <span>Industry</span>Adventure / Travel</li>
-                                                <li class="text-uppercase">
-                                                    <span>Services</span>Design, Art Direction, Website</li>
-                                                <li class="text-uppercase">
-                                                    <span>Website</span>
-                                                    <a href="#">www.project.com</a>
-                                                </li>
+                                                    <span>Industry</span>eSports</li>
                                             </ul>
                                         </div>
                                     </div>
