--- a/index.html
+++ b/index.html
@@ -698,22 +698,22 @@
                             <form id="contact-form" name = 'contact-form' action="mail_handler.php" method="POST">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <input name="name" type="text" placeholder="Your Name :" required>
+                                        <input name="name" type="text" placeholder="Your Name :">
                                     </div>
                                     <div class="col-md-6">
-                                        <input name="email" type="email" placeholder="Email :" required>
+                                        <input name="email" type="email" placeholder="Email :">
                                     </div>
                                     <div class="col-md-12">
-                                        <input name="subject" type="text" placeholder="Subject :" required>
+                                        <input name="subject" type="text" placeholder="Subject :">
                                     </div>
                                     <div class="col-md-12">
-                                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message :" required></textarea>
+                                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message :"></textarea>
                                         <button class="btn" type="submit">Send Message</button>
                                     </div>
                                 </div>
                             </form>
                             <p class="ajax-response"></p>
-                            <p id = "validationAlert"></p>
+                            <p id = "formValidationAlerts"></p>
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5">
