--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                                             <li class="nav-item">
                                                 <a class="nav-link" href="#contact">Contact</a>
                                             </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="Brandon Resume.pdf" target="_blank">Resume</a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </nav>
@@ -107,6 +110,7 @@
                                         <b>Designer</b>
                                     </span>
                                 </h4>
+                                <a href="Brandon Resume.pdf" target="_blank" class="btn smoth-scroll">Resume</a>
                             </div>
                         </div>
                     </div>
@@ -767,7 +771,9 @@
                                 <div class="footer-icon mb-20">
                                     <a target="_blank" href="https://www.linkedin.com/in/brandonpark206/"><i class="ti-linkedin"></i></a>
                                     <a target="_blank" href="https://github.com/brandon206"><i class="ti-github"></i></a>
-                                    <a target="_blank" href="https://www.instagram.com/designtrav/"><i class="ti-instagram"></i></a>                                </div>
+                                    <a target="_blank" href="https://www.instagram.com/designtrav/"><i class="ti-instagram"></i></a>
+                                    <a target="_blank" href="Brandon Resume.pdf"><i class="ti-pencil-alt"></i></a>
+                                </div>
                                 <p>Copyright- 2019 brandontravispark.com, All Right Reserved</p>
                             </div>
                         </div>
