--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                                 <a class="nav-link" href="#contact">Contact</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="Brandon Resume.pdf" target="_blank">Resume</a>
+                                                <a class="nav-link" href="Web Dev Resume.pdf" target="_blank">Resume</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -110,7 +110,7 @@
                                         <b>Designer</b>
                                     </span>
                                 </h4>
-                                <a href="Brandon Resume.pdf" target="_blank" class="btn smoth-scroll">Resume</a>
+                                <a href="Web Dev Resume.pdf" target="_blank" class="btn smoth-scroll">Resume</a>
                             </div>
                         </div>
                     </div>
@@ -682,7 +682,7 @@
                                 <h6>
                                     <span>Phone</span>: 949-329-5625</h6>
                             </div>
-                            <a href="Brandon Resume.pdf" target="_blank" class="btn smoth-scroll">Resume</a>
+                            <a href="Web Dev Resume.pdf" target="_blank" class="btn smoth-scroll">Resume</a>
                         </div>
                     </div>
                 </div>
@@ -772,7 +772,7 @@
                                     <a target="_blank" href="https://www.linkedin.com/in/brandonpark206/"><i class="ti-linkedin"></i></a>
                                     <a target="_blank" href="https://github.com/brandon206"><i class="ti-github"></i></a>
                                     <a target="_blank" href="https://www.instagram.com/designtrav/"><i class="ti-instagram"></i></a>
-                                    <a target="_blank" href="Brandon Resume.pdf"><i class="ti-pencil-alt"></i></a>
+                                    <a target="_blank" href="Web Dev Resume.pdf"><i class="ti-pencil-alt"></i></a>
                                 </div>
                                 <p>Copyright- 2019 brandontravispark.com, All Right Reserved</p>
                             </div>
