--- a/index.html
+++ b/index.html
@@ -678,9 +678,10 @@
                                 to meet new mentors/seniors that will mold me and guide me to the right path in becoming a great developer.</p>
                             <div class="info-me mb-30">
                                 <h6>
-                                    <span>Mail</span>: brandonpark206@gmail.com</h6>
+                                    <span>Mail</span>: <a href="mailto:brandonpark206@gmail.com">brandonpark206@gmail.com</a></h6>
                                 <h6>
-                                    <span>Phone</span>: 949-329-5625</h6>
+                                    <span>Phone</span>: <a href="tel:+1-949-329-5625">949-329-5625</a>
+                                </h6>
                             </div>
                             <a href="Web Dev Resume.pdf" target="_blank" class="btn smoth-scroll">Resume</a>
                         </div>
@@ -741,7 +742,7 @@
                                     </div>
                                     <div class="contact-text">
                                         <h5>Contact Me</h5>
-                                        <span>949-329-5625</span>
+                                        <a href="tel:+1-949-329-5625">949-329-5625</a>
                                     </div>
                                 </li>
                                 <li>
@@ -750,7 +751,7 @@
                                     </div>
                                     <div class="contact-text">
                                         <h5>Email Me</h5>
-                                        <span>brandonpark206@gmail.com</span>
+                                        <a href="mailto:brandonpark206@gmail.com">brandonpark206@gmail.com</a>
                                     </div>
                                 </li>
                             </ul>
@@ -772,7 +773,7 @@
                                     <a target="_blank" href="https://www.linkedin.com/in/brandonpark206/"><i class="ti-linkedin"></i></a>
                                     <a target="_blank" href="https://github.com/brandon206"><i class="ti-github"></i></a>
                                     <a target="_blank" href="https://www.instagram.com/designtrav/"><i class="ti-instagram"></i></a>
-                                    <a target="_blank" href="Web Dev Resume.pdf"><i class="ti-pencil-alt"></i></a>
+                                    <a target="_blank" href="Web Dev Resume.pdf"><i class="ti-file"></i></a>
                                 </div>
                                 <p>Copyright- 2019 brandontravispark.com, All Right Reserved</p>
                             </div>
